force-app/main/default/objects/Cobro__c/Cobro__c.object-meta.xml
<CustomObject>
    <label>Cobro</label>
    <nameField>
        <label>Cobro Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cobros</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>