force-app/main/default/objects/Cobro__c/fields/Codigo_Banco__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Banco__c</fullName>
    <label>Código Banco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>