force-app/main/default/objects/Cobro__c/fields/Concepto__c.field-meta.xml
<CustomField>
    <fullName>Concepto__c</fullName>
    <label>Concepto</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>