force-app/main/default/objects/Cobro__c/fields/Concepto_comun__c.field-meta.xml
<CustomField>
    <fullName>Concepto_comun__c</fullName>
    <label>Concepto común</label>
    <length>5</length>
    <type>Text</type>
</CustomField>