force-app/main/default/objects/Cobro__c/fields/Concepto_propio__c.field-meta.xml
<CustomField>
    <fullName>Concepto_propio__c</fullName>
    <label>Concepto propio</label>
    <length>5</length>
    <type>Text</type>
</CustomField>