force-app/main/default/objects/Cobro__c/fields/Cuenta_destino__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_destino__c</fullName>
    <label>Cuenta destino</label>
    <length>24</length>
    <type>Text</type>
</CustomField>