force-app/main/default/objects/Cobro__c/fields/Cuenta_origen__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_origen__c</fullName>
    <label>Cuenta origen</label>
    <length>24</length>
    <type>Text</type>
</CustomField>