force-app/main/default/objects/Cobro__c/fields/Descripci_n_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n_Cuenta__c</fullName>
    <label>Descripción Cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>