force-app/main/default/objects/Cobro__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factura</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Factura__c.Name</field>
            <operation>notContain</operation>
            <value>Plan de pagos</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Factura__c</referenceTo>
    <relationshipLabel>Cobros</relationshipLabel>
    <relationshipName>Cobros</relationshipName>
    <type>Lookup</type>
</CustomField>