force-app/main/default/objects/Cobro__c/fields/Fecha_valor__c.field-meta.xml
<CustomField>
    <fullName>Fecha_valor__c</fullName>
    <label>Fecha valor</label>
    <type>Date</type>
</CustomField>