force-app/main/default/objects/Cobro__c/fields/Id_movimiento__c.field-meta.xml
<CustomField>
    <fullName>Id_movimiento__c</fullName>
    <externalId>true</externalId>
    <label>Id movimiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>