force-app/main/default/objects/Cobro__c/fields/Id_sociedad__c.field-meta.xml
<CustomField>
    <fullName>Id_sociedad__c</fullName>
    <label>Id sociedad</label>
    <length>10</length>
    <type>Text</type>
</CustomField>