force-app/main/default/objects/Cobro__c/fields/IdCuenta__c.field-meta.xml
<CustomField>
    <fullName>IdCuenta__c</fullName>
    <label>Id Cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>