force-app/main/default/objects/Cobro__c/fields/Nombre_sociedad__c.field-meta.xml
<CustomField>
    <fullName>Nombre_sociedad__c</fullName>
    <label>Nombre de la sociedad</label>
    <length>80</length>
    <type>Text</type>
</CustomField>