force-app/main/default/objects/Cobro__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <label>Referencia</label>
    <type>TextArea</type>
</CustomField>