force-app/main/default/objects/Cobro__c/listViews/Cobros_no_concliados.listView-meta.xml
<ListView>
    <fullName>Cobros_no_concliados</fullName>
    <columns>NAME</columns>
    <columns>Importe__c</columns>
    <columns>Concepto__c</columns>
    <columns>IBAN__c</columns>
    <columns>Codigo_Banco__c</columns>
    <columns>Factura__c</columns>
    <columns>Cuenta_destino__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Factura__c</field>
        <operation>equals</operation>
    </filters>
    <label>Cobros no concliados</label>
</ListView>