force-app/main/default/objects/Cobro__c/listViews/CobrosConciliados.listView-meta.xml
<ListView>
    <fullName>CobrosConciliados</fullName>
    <columns>NAME</columns>
    <columns>Importe__c</columns>
    <columns>Concepto__c</columns>
    <columns>IBAN__c</columns>
    <columns>Codigo_Banco__c</columns>
    <columns>Factura__c</columns>
    <columns>Cuenta_destino__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Factura__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Cobros conciliados</label>
</ListView>